# Quantum-Dueling

./: .gitignore  LICENSE  README.md
figures/programs to produce figures/: Combined_Output.txt  Complexity_data n=12-16.txt  Complexity_data n=5-11.txt  Complexity_data n=5-16.txt  First_Output.txt  Heuristics_Output_1.txt  Heuristics_Output_2-18.txt  Heuristics_Output_3.txt  Heuristics_Output_for_all_N-18.txt  N_iter_complex.py  Output_For_All_M.txt  PaperIntroScatterWithLine.py  barGraphPaper.py  heuristic_graph.py  performanceBaseOnMPaper.py  quantum_gates_diagram.tex
simulation/: CMakeLists.txt  Dueling.cpp  Dueling.h  G1_number_finder.cpp  Heuristics.cpp  Heuristics_for_all_N.cpp  alpha_beta_simulation.cpp  data_generator.cpp  iteration_probability_original.cpp  maximum_probability_all_M_original.cpp  parameter_finder.cpp
